# dacite

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
dacite/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
dacite-winit/: CHANGELOG.md  Cargo.toml  README.md
dacite-winit/src/: lib.rs
dacite/examples/shaders/: triangle.vert.spv
dacite/src/: amd_rasterization_order.rs  chain.rs  dacite_bitflags.rs  ext_debug_marker.rs  ext_validation_flags.rs  khr_android_surface.rs  khr_display_swapchain.rs  khr_get_physical_device_properties2.rs  khr_mir_surface.rs  khr_wayland_surface.rs  khr_win32_surface.rs  khr_xcb_surface.rs  khr_xlib_surface.rs  lib.rs  nv_dedicated_allocation.rs  nv_external_memory.rs  nv_external_memory_capabilities.rs  nv_external_memory_win32.rs  nv_win32_keyed_mutex.rs  utils.rs  vulkan_object.rs
dacite/src/core/: allocator_helper.rs  buffer.rs  buffer_view.rs  command_buffer.rs  command_pool.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  device_memory.rs  event.rs  extension_structs.rs  fence.rs  framebuffer.rs  image.rs  image_view.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  pipeline_cache.rs  pipeline_layout.rs  query_pool.rs  queue.rs  render_pass.rs  sampler.rs  semaphore.rs  shader_module.rs
dacite/src/ext_debug_report/: callback_helper.rs  debug_report_callback.rs  mod.rs
dacite/src/khr_display/: display.rs  display_mode.rs  mod.rs
dacite/src/khr_surface/: mod.rs  surface.rs
dacite/src/khr_swapchain/: mod.rs  swapchain.rs
examples/: info.rs  triangle.rs
examples/shaders/: triangle.frag.spv
examples/triangle/: Cargo.toml
examples/triangle-offscreen/: Cargo.toml
examples/triangle-offscreen/src/: main.rs
examples/triangle/src/: main.rs
src/: chain.rs  khr_display_swapchain.rs  khr_mir_surface.rs  khr_wayland_surface.rs  khr_win32_surface.rs  khr_xcb_surface.rs  khr_xlib_surface.rs  lib.rs  utils.rs  version.rs  vulkan_object.rs
src/core/: allocator_helper.rs  buffer.rs  buffer_view.rs  command_buffer.rs  command_pool.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  device_memory.rs  event.rs  extension_structs.rs  fence.rs  framebuffer.rs  image.rs  image_view.rs  instance.rs  instance_handle.rs  mod.rs  physical_device.rs  pipeline.rs  pipeline_cache.rs  pipeline_layout.rs  query_pool.rs  queue.rs  render_pass.rs  sampler.rs  semaphore.rs  shader_module.rs
src/ext_debug_report/: mod.rs
src/khr_display/: display_mode.rs  mod.rs
src/khr_surface/: mod.rs  surface.rs
src/khr_swapchain/: mod.rs  swapchain.rs
tools/: run-test-build.sh
tools/test-build/: Cargo.toml
tools/test-build/src/: main.rs
