[package]
name = "dacite"
version = "0.1.0"
authors = ["Dennis Hamester <dennis.hamester@startmail.com>"]
description = "Safe low-level Vulkan library"
homepage = "https://gitlab.com/dennis-hamester/dacite"
repository = "https://gitlab.com/dennis-hamester/dacite"
keywords = [ "vulkan", "graphics" ]
license = "ISC"

[badges]
gitlab = { repository = "dennis-hamester/dacite" }

[dependencies]
libc = "0.2"

[dependencies.vks]
version = "0.15"
default-features = false

[features]
default = [ "vk_1_0_3" ]

vk_1_0_3 = [ "core_1_0_3", "khr_surface_25", "ext_debug_report_1", "khr_display_21",
             "khr_swapchain_67" ]

core = [ "core_1_0_3" ]
core_1_0_3 = [ "vks/core_1_0_3" ]

khr_surface = [ "khr_surface_25" ]
khr_surface_25 = [ "core_1_0_3", "vks/khr_surface_25" ]

ext_debug_report = [ "ext_debug_report_1" ]
ext_debug_report_1 = [ "core_1_0_3", "vks/ext_debug_report_1" ]

khr_display = [ "khr_display_21" ]
khr_display_21 = [ "core_1_0_3", "khr_surface_25", "vks/khr_display_21" ]

khr_swapchain = [ "khr_swapchain_67" ]
khr_swapchain_67 = [ "core_1_0_3", "khr_surface_25", "vks/khr_swapchain_67" ]
