[package]
name = "dacite"
version = "0.1.0"
authors = ["Dennis Hamester <dennis.hamester@startmail.com>"]
description = "Safe low-level Vulkan library"
homepage = "https://gitlab.com/dennis-hamester/dacite"
repository = "https://gitlab.com/dennis-hamester/dacite"
keywords = [ "vulkan", "graphics" ]
license = "ISC"
exclude = [
    ".gitignore",
    ".gitlab-ci.yml",
]

[badges]
gitlab = { repository = "dennis-hamester/dacite" }

[dependencies]
libc = "0.2"
libloading = "0.4"

[dependencies.vks]
version = "0.16.1"
default-features = false
features = [ "no_function_prototypes", "core_1_0_3",
             "khr_surface_25", "ext_debug_report_1", "khr_display_21", "khr_swapchain_67",
             "khr_display_swapchain_9", "khr_xlib_surface_6", "khr_wayland_surface_5" ]

[dev-dependencies]
winit = "0.6"
