[package]
name = "dacite-winit"
version = "0.1.0"
authors = ["Dennis Hamester <dennis.hamester@startmail.com>"]
description = "winit bindings for dacite"
homepage = "https://gitlab.com/dennis-hamester/dacite"
repository = "https://gitlab.com/dennis-hamester/dacite"
keywords = [ "vulkan", "graphics" ]
license = "ISC"

[badges]
gitlab = { repository = "dennis-hamester/dacite" }

[dependencies.dacite]
version = "0.1.0"
path = "../dacite"

[dependencies]
winit = "0.6"
