[package]
name = "dacite-winit"
version = "0.6.0"
authors = ["Dennis Hamester <dennis.hamester@startmail.com>"]
description = "Interoperability library for dacite and winit for easy Vulkan surface creation"
documentation = "https://docs.rs/dacite-winit"
homepage = "https://gitlab.com/dennis-hamester/dacite"
repository = "https://gitlab.com/dennis-hamester/dacite"
readme = "README.md"
categories = [ "gui" ]
keywords = [ "windowing", "vulkan" ]
license = "ISC"

[badges]
gitlab = { repository = "dennis-hamester/dacite" }

[dependencies.dacite]
version = "0.7"
path = "../dacite"

[dependencies]
bitflags = "1.0"
winit = "0.7"
