[package]
name = "dacite"
version = "0.5.1"
authors = ["Dennis Hamester <dennis.hamester@startmail.com>"]
description = "Mostly safe low-level Vulkan library"
documentation = "https://docs.rs/dacite"
homepage = "https://gitlab.com/dennis-hamester/dacite"
repository = "https://gitlab.com/dennis-hamester/dacite"
readme = "README.md"
categories = [ "rendering", "rendering::graphics-api" ]
keywords = [ "vulkan", "graphics" ]
license = "ISC"

[badges]
gitlab = { repository = "dennis-hamester/dacite" }

[dependencies]
bitflags = "0.9"
libc = "0.2"
libloading = "0.4"

[dependencies.vks]
version = "0.19"
default-features = false
features = [ "no_function_prototypes", "vk_1_0_12",
             "core_1_0_25",
             "amd_shader_trinary_minmax_1", "amd_shader_explicit_vertex_parameter_1",
             "amd_gcn_shader_1", "ext_debug_report_3", "nv_dedicated_allocation_1",
             "img_format_pvrtc_1", "amd_draw_indirect_count_1", "nv_external_memory_capabilities_1",
             "nv_external_memory_1", "nv_external_memory_win32_1", "nv_win32_keyed_mutex_1",
             "khr_get_physical_device_properties2_1" ]
