[package]
name = "dacite"
version = "0.7.0"
authors = ["Dennis Hamester <dennis.hamester@startmail.com>"]
description = "Mostly safe low-level Vulkan library"
documentation = "https://docs.rs/dacite"
homepage = "https://gitlab.com/dennis-hamester/dacite"
repository = "https://gitlab.com/dennis-hamester/dacite"
readme = "README.md"
categories = [ "rendering", "rendering::graphics-api" ]
keywords = [ "vulkan", "graphics" ]
license = "ISC"

[badges]
gitlab = { repository = "dennis-hamester/dacite" }

[dependencies]
bitflags = "1.0"
libc = "0.2"
libloading = "0.4"
vks = "0.21"
