[package]
name = "triangle"
version = "0.1.0"
authors = ["Dennis Hamester <dennis.hamester@startmail.com>"]
license = "ISC"

[dependencies.dacite]
path = "../../dacite"

[dependencies.dacite-winit]
path = "../../dacite-winit"

[dependencies]
winit = "0.8"
glsl-to-spirv-macros = "0.1"
glsl-to-spirv-macros-impl = "0.1"
